# gdc-qag

./: .gitignore  .secrets.baseline  README.md  check_6k_mutations_withTable2.py  gdc_pipeline.py  gdc_projects.tsv  mcp_server.py  pyproject.toml  qap_exp.py  requirements.txt  truth.py
csvs/: baby_tests.csv  baby_tests.intermediate.csv  baby_tests.results.csv  gdc_projects.tsv  mini_tests.csv
evals/: gpt4-eval.py  llama-eval-guidance.py  llama-eval.py  qwen-eval-guidance.py  qwen-eval.py
methods/: gdc_api_calls.py  llm_inference_server.py  mcp_server.py  tool_chat_template_llama3.1_json.jinja  tools.py  tools_template.py  utilities.py
notebooks/: eval-bert-model.ipynb  gradio_app.ipynb  llm_evaluation_dataset.ipynb  mcp_tests.ipynb  mcp_tools.ipynb  mcp_tools_vllm.ipynb  open_ai_batch.ipynb  other_applications.ipynb  plot.ipynb  questions.csv  survival_analysis.ipynb  synthetic_data_query_intent_train_bert.ipynb
notebooks/csvs/: questions.intermediate.csv  questions.results.csv
